@@ -124,10 +124,11 @@ static int par_probe(CableHandle *h)
 	return 0;
 }
 
-static int par_put(CableHandle *h, uint8_t *data, uint16_t len)
+static int par_put(CableHandle *h, uint8_t *data, uint32_t len)
 {
 	int bit;
-  	int i, j;
+  	int i;
+	unsigned int j;
   	tiTIME clk;
 
 	for(j = 0; j < len; j++)
@@ -185,10 +186,11 @@ static int par_put(CableHandle *h, uint8_t *data, uint16_t len)
 	return 0;
 }
 
-static int par_get(CableHandle *h, uint8_t *data, uint16_t len)
+static int par_get(CableHandle *h, uint8_t *data, uint32_t len)
 {
 	int bit;
-	int i, j;
+	int i;
+	unsigned int j;
   	tiTIME clk;
 
 	for(j = 0; j < len; j++)
