@@ -1,5 +1,8 @@
 SubVersion: $Id$
 
+To do:
+ change length of cable_send/recv to uint16 into uint32
+
 Log:
 
 - 02/05/2005, version 0.0.1: roms
